--- a/about.html
+++ b/about.html
@@ -63,59 +63,65 @@
   <!--主要内容-->
   <div class="about-container">
     <!--关于我们-->
-    <section class="aboutus">
-      <h2>Who We Are?</h2>
-      <div class="aboutus-content">
-        <img src="img/about/who-we-are.jpg" alt="123" class="flyLeftAnimate">
-        <article class="aboutus-info flyRightAnimate">
-          <div class="aboutus-info-text">
-            <h3>关于我们</h3>
-            <div class="line"></div>
-            <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。【蓝派豪华团队】由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
-            <p class="s2"><strong>我们的服务理念： </strong></br>【 The Best or Nothing ！ 】</br> 一直被模仿，从未被超越！</p>
-          </div>
-        </article>
-      </div>
-    </section>
+    <a name="aboutus">
+      <section class="aboutus">
+        <h2>Who We Are?</h2>
+        <div class="aboutus-content">
+          <img src="img/about/who-we-are.jpg" alt="123" class="flyLeftAnimate">
+          <article class="aboutus-info flyRightAnimate">
+            <div class="aboutus-info-text">
+              <h3>关于我们</h3>
+              <div class="line"></div>
+              <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。【蓝派豪华团队】由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
+              <p class="s2"><strong>我们的服务理念： </strong></br>【 The Best or Nothing ！ 】</br> 一直被模仿，从未被超越！</p>
+            </div>
+          </article>
+        </div>
+      </section>
+    </a>
     <!--联系我们-->
-    <section class="contactus">
-      <h2>Get In Touch.</h2>
-      <div class="contactus-content clearfix">
-        <img src="img/about/contact-bg.jpg" alt="123" class="flyRightAnimate">
-        <article class="contactus-info flyLeftAnimate">
-          <div class="line"></div>
-          <div class="contactus-info-text">
-            <h3>联系我们 / 商务合作</h3>
-            <div class="contactus-info-text-left">
-              <p><span></span>Email</br>Us</p>
-              <p><span></span>Call</br>Us</p>
-              <p><span></span>Visit</br>Us</p>
+    <a name="contactus">
+      <section class="contactus">
+        <h2>Get In Touch.</h2>
+        <div class="contactus-content clearfix">
+          <img src="img/about/contact-bg.jpg" alt="123" class="flyRightAnimate">
+          <article class="contactus-info flyLeftAnimate">
+            <div class="line"></div>
+            <div class="contactus-info-text">
+              <h3>联系我们 / 商务合作</h3>
+              <div class="contactus-info-text-left">
+                <p><span></span>Email</br>Us</p>
+                <p><span></span>Call</br>Us</p>
+                <p><span></span>Visit</br>Us</p>
+              </div>
+              <div class="contactus-info-text-right">
+                <p>hao@lanpai.com</p>
+                <p>021-6565656</p>
+                <p>上海浦东创新大道1号</p>
+              </div>
             </div>
-            <div class="contactus-info-text-right">
-              <p>hao@lanpai.com</p>
-              <p>021-6565656</p>
-              <p>上海浦东创新大道1号</p>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
+          </article>
+        </div>
+      </section>
+    </a>
     <!--伙伴-->
-    <section class="friends">
-      <h2>Our Friends.</h2>
-      <ul class="clearfix flyLeftAnimate">
-        <li><img src="img/friends/1.jpg" alt="Our Friends"></li>
-        <li><img src="img/friends/2.jpg" alt="Our Friends"></li>
-        <li><img src="img/friends/3.jpg" alt="Our Friends"></li>
-        <li><img src="img/friends/4.jpg" alt="Our Friends"></li>
-        <li><img src="img/friends/5.jpg" alt="Our Friends"></li>
-        <li><img src="img/friends/10.jpg" alt="Our Friends"></li>
-        <li><img src="img/friends/9.jpg" alt="Our Friends"></li>
-        <li><img src="img/friends/8.jpg" alt="Our Friends"></li>
-        <li><img src="img/friends/7.jpg" alt="Our Friends"></li>
-        <li><img src="img/friends/6.jpg" alt="Our Friends"></li>
-      </ul>
-    </section>
+    <a name="friends">
+      <section class="friends">
+        <h2>Our Friends.</h2>
+        <ul class="clearfix flyLeftAnimate">
+          <li><img src="img/friends/1.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/2.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/3.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/4.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/5.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/10.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/9.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/8.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/7.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/6.jpg" alt="Our Friends"></li>
+        </ul>
+      </section>
+    </a>
   </div>
   <!--页尾-->
   <footer>
@@ -123,11 +129,11 @@
     <div class="info">
       <div class="info-nr">
         <nav>
-          <a href="about.html">关于我们</a>
+          <a href="#aboutus">关于我们</a>
           <span>|</span>
-          <a href="about.html">联系我们</a>
+          <a href="#contactus">联系我们 / 商务合作</a>
           <span>|</span>
-          <a href="about.html">商务合作</a>
+          <a href="#friends">合作伙伴</a>
         </nav>
         <p>上海张江高科张衡路111号 111号 Copyright 2015 沪ICP备14020292</p>
       </div>
