--- a/photo.html
+++ b/photo.html
@@ -106,9 +106,9 @@
     <nav>
       <a href="about.html">关于我们</a>
       <span>|</span>
-      <a href="about.html">联系我们</a>
+      <a href="about.html#contactus">联系我们 / 商务合作</a>
       <span>|</span>
-      <a href="about.html">商务合作</a>
+      <a href="about.html#friends">合作伙伴</a>
     </nav>
     <p>上海张江高科张衡路111号 111号 Copyright 2015 沪ICP备14020292</p>
   </footer>
@@ -121,7 +121,7 @@
   </div>
   <!--弹出层-->
   <div class="detailCover">
-   
+
   </div>
 
   <!--JS文件-->
