--- a/place.html
+++ b/place.html
@@ -81,6 +81,16 @@
     <div class="scrolldown">滑动更多内容</div>
   </div>
   <!--主要内容-->
+  <div class="container" id="loading">
+    <div class="loading">
+      <div class="rect rect1"></div>
+      <div class="rect rect2"></div>
+      <div class="rect rect3"></div>
+      <div class="rect rect4"></div>
+      <div class="rect rect5"></div>
+    </div>
+  </div>
+  </div>
   <div class="container" id="placeList">
     <!--分类-->
     <!--<div class="seeMore">查看更多</div>-->
@@ -93,9 +103,9 @@
         <nav>
           <a href="about.html">关于我们</a>
           <span>|</span>
-          <a href="about.html">联系我们</a>
+          <a href="about.html#contactus">联系我们 / 商务合作</a>
           <span>|</span>
-          <a href="about.html">商务合作</a>
+          <a href="about.html#friends">合作伙伴</a>
         </nav>
         <p>上海张江高科张衡路111号 111号 Copyright 2015 沪ICP备14020292</p>
       </div>
