--- a/admin/admin-login.html
+++ b/admin/admin-login.html
@@ -59,18 +59,21 @@
       <div class="form-group">
         <div class="input-group">
           <div class="input-group-addon"><span class="glyphicon glyphicon-user"></span></div>
-          <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Account">
+          <input type="text" class="form-control" id="userAccount" placeholder="Account">
         </div>
       </div>
       <div class="form-group">
         <div class="input-group">
           <div class="input-group-addon"><span class="glyphicon glyphicon-paperclip"></span></div>
-          <input type="password" class="form-control" id="exampleInputEmail1" placeholder="Password">
+          <input type="password" class="form-control" id="userPassword" placeholder="Password">
         </div>
       </div>
-      <button type="submit" class="btn btn-block btn-primary btn-lg">Login</button>
+      <button type="button" class="btn btn-block btn-primary btn-lg" id="login">Login</button>
     </form>
   </div>
+
+
+  <script src="../admin/js/adminlg.js"></script>
 </body>
 
 </html>
