--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -7,6 +7,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="renderer" content="webkit">
   <title>【蓝派】--后台管理</title>
+  <script type="text/javascript">
+    var lpcname = GetCookie('account_lpc');
+    if (lpcname == undefined || lpcname !== 'lpcadmin') {
+      window.location.href = 'admin-login.html';
+    }
+    function GetCookie(name) {
+      var arg = name + "=";
+      var alen = arg.length;
+      var clen = window.document.cookie.length;
+      var i = 0;
+      while (i < clen) {
+        var j = i + alen;
+        if (window.document.cookie.substring(i, j) == arg) return getCookieVal(j);
+        i = window.document.cookie.indexOf(" ", i) + 1;
+        if (i == 0)
+          break;
+      }
+      return null;
+    }
+
+    function getCookieVal(offset) {
+      var endstr = window.document.cookie.indexOf(";", offset);
+      if (endstr == -1)
+        endstr = window.document.cookie.length;
+      return unescape(window.document.cookie.substring(offset, endstr));
+    }
+  </script>
   <link href="../admin/css/bootstrap.min.css" rel="stylesheet">
   <link href="../admin/css/dashboard.css" rel="stylesheet">
   <link href="../admin/css/admin-style.css" rel="stylesheet">
@@ -27,13 +54,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <a class="navbar-brand" href="../index.html">【蓝派】</a>
+        <a class="navbar-brand" href="###">【蓝派】</a>
       </div>
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <p class="navbar-text">后台管理系统</p>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="../index.html"><span class="glyphicon glyphicon-home"></span> 网站首页</a></li>
-          <li><a href=""><span class="glyphicon glyphicon-off"></span> 退出</a></li>
+          <li id="outPage"><a href=""><span class="glyphicon glyphicon-off" ></span> 退出</a></li>
         </ul>
       </div>
     </div>
