update-0922-19:54 complete test visual

--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -130,7 +130,7 @@
             <input type="text" class="form-control" name="title" id="itemTitle1">
             <div class="mt20">
               <label for="">简介:</label>
-              <textarea class="form-control" rows="4" cols="82" name="brief" id="itemTitle1"></textarea>
+              <textarea class="form-control" rows="4" cols="82" name="brief" id="itemBrief1"></textarea>
             </div>
           </form>
           <form id="fbpx-details">
