update-0923-11:06 complete test all

--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="renderer" content="webkit">
   <title>【蓝派】--后台管理</title>
-  <!--<script type="text/javascript">
+  <script type="text/javascript">
     var lpcname = GetCookie('account_lpc');
     if (lpcname == undefined || lpcname !== 'lpcadmin') {
       window.location.href = 'admin-login.html';
@@ -33,7 +33,7 @@
         endstr = window.document.cookie.length;
       return unescape(window.document.cookie.substring(offset, endstr));
     }
-  </script>-->
+  </script>
   <link href="../admin/css/bootstrap.min.css" rel="stylesheet">
   <link href="../admin/css/dashboard.css" rel="stylesheet">
   <link href="../admin/css/admin-style.css" rel="stylesheet">
@@ -328,7 +328,7 @@
                 <tr>
                   <th class="col-md-1 text-primary">序号</th>
                   <th class="col-md-3">相册ID</th>
-                  <th class="col-md-4">相册名称</th>
+                  <th class="col-md-4">相册名称</th>                
                   <th class="col-md-2">操作</th>
                 </tr>
               </thead>
