update-0923-14:26 complete test all

--- a/about.html
+++ b/about.html
@@ -95,9 +95,9 @@
                 <p><span></span>Visit</br>Us</p>
               </div>
               <div class="contactus-info-text-right">
-                <p>hao@lanpai.com</p>
-                <p>021-6565656</p>
-                <p>上海浦东创新大道1号</p>
+                <p>3092296410@qq.com</p>
+                <p>18117409991</p>
+                <p>上海市南京西路1486号</p>
               </div>
             </div>
           </article>
@@ -135,7 +135,7 @@
           <span>|</span>
           <a href="#friends">合作伙伴</a>
         </nav>
-        <p>上海张江高科张衡路111号 111号 Copyright 2015 沪ICP备14020292</p>
+        <p>上海市南京西路1486号 &nbsp;&nbsp;&nbsp;&nbsp; Copyright &nbsp;2016&nbsp; 沪ICP备16021382号-1</p>
       </div>
     </div>
   </footer>
