--- a/place.html
+++ b/place.html
@@ -96,7 +96,7 @@
           <span>|</span>
           <a href="about.html#friends">合作伙伴</a>
         </nav>
-        <p>上海张江高科张衡路111号 111号 Copyright 2015 沪ICP备14020292</p>
+        <p>上海市南京西路1486号 &nbsp;&nbsp;&nbsp;&nbsp; Copyright &nbsp;2016&nbsp; 沪ICP备16021382号-1</p>
       </div>
     </div>
   </footer>
